Make builds more reproducible
https://docs.gradle.org/current/userguide/working_with_files.html#sec:reproducible_archives

Signed-off-by: Tad <tad@spotco.us>

--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,11 @@ jar {
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
+tasks.withType(AbstractArchiveTask).configureEach {
+    preserveFileTimestamps = false
+    reproducibleFileOrder = true
+}
+
 def getVersionGit() {
     def versionGit = ""
     try {
